chore(brand): rename to LiNKdev Starter Kit
